--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -1,9 +1,9 @@
 \begin{titlepage}
 \begin{center}
-\noindent {\large \textbf{UNIVERSITY OF LYON - LUMIÈRE LYON 2}} \\
+\noindent {\large \textbf{UNIVERSITÉ DE LYON - LUMIÈRE LYON 2}} \\
 \vspace*{0.3cm}
 \noindent {\LARGE \textbf{ECOLE DOCTORALE INFOMATHS}} \\
-\noindent \textbf{SCIENCES ET TECHNOLOGIES DE L'INFORMATION \\ ET DE LA COMMUNICATION} \\
+%\noindent \textbf{SCIENCES ET TECHNOLOGIES DE L'INFORMATION \\ ET DE LA COMMUNICATION} \\
 \vspace*{0.5cm}
 \noindent \Huge \textbf{P H D\ \ T H E S I S} \\
 \vspace*{0.3cm}
@@ -12,12 +12,12 @@
 \noindent \LARGE \textbf{PhD of Computer Science} \\
 \vspace*{0.3cm}
 \noindent \Large of the University of Lyon - Lumière 2\\
-\noindent \Large \textbf{Specialty : \textsc{Computer Science}}\\
+%\noindent \Large \textbf{Specialty : \textsc{Computer Science}}\\
 \vspace*{0.4cm}
 \noindent \large {Defended by\\}
 \noindent \LARGE Edmundo-Pavel \textsc{Soriano-Morales} \\
 \vspace*{0.8cm}
-\noindent {\Huge \textbf{}} \\
+\noindent {\Huge \textbf{Hypergraphs and information fusion for term representation enrichment. Applications to word sense disambiguation and named entity recognition}} \\
 \vspace*{0.8cm}
 \noindent \Large Thesis Advisor: Sabine \textsc{Loudcher} and Julien \textsc{Ah-Pine} \\
 
